--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,13 +12,13 @@
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.12",
     "axios": "^1.9.0",
-    "expo": "~53.0.8",
+    "expo": "^53.0.9",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
-    "react-native-reanimated": "^3.16.2",
+    "react-native-reanimated": "^3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
     "tailwindcss": "^3.4.17"
