--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
+    "react-native-heroicons": "^4.0.0",
     "react-native-reanimated": "^3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
