--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
+    "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.12",
     "axios": "^1.9.0",
@@ -18,12 +20,14 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.24.0",
     "react-native-heroicons": "^4.0.0",
-    "react-native-reanimated": "^3.17.4",
+    "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
-    "tailwindcss": "^3.4.17",
-    "@expo/vector-icons": "^14.1.0"
+    "react-native-tab-view": "^4.1.0",
+    "react-native-vector-icons": "^10.2.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
