--- a/mobile/package.json
+++ b/mobile/package.json
@@ -27,7 +27,8 @@
     "react-native-screens": "~4.10.0",
     "react-native-tab-view": "^4.1.0",
     "react-native-vector-icons": "^10.2.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "expo-font": "~13.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
