--- a/mobile/package.json
+++ b/mobile/package.json
@@ -28,7 +28,8 @@
     "react-native-tab-view": "^4.1.0",
     "react-native-vector-icons": "^10.2.0",
     "tailwindcss": "^3.4.17",
-    "expo-font": "~13.3.1"
+    "expo-font": "~13.3.1",
+    "expo-splash-screen": "~0.30.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
