--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.12",
     "axios": "^1.9.0",
     "expo": "^53.0.9",
+    "expo-font": "~13.3.1",
+    "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
@@ -27,9 +30,7 @@
     "react-native-screens": "~4.10.0",
     "react-native-tab-view": "^4.1.0",
     "react-native-vector-icons": "^10.2.0",
-    "tailwindcss": "^3.4.17",
-    "expo-font": "~13.3.1",
-    "expo-splash-screen": "~0.30.8"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
